# nurl

./: .editorconfig  .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  default.nix  flake.nix  overlay.nix
.github/workflows/: ci.yml  release.yml
src/: cli.rs  config.rs  main.rs  prefetch.rs  revless.rs  simple.rs
src/common/: cvs.rs  mod.rs  simple.rs
src/fetcher/: bitbucket.rs  builtin_git.rs  crates_io.rs  git.rs  gitea.rs  github.rs  gitiles.rs  gitlab.rs  hex.rs  hg.rs  mod.rs  patch.rs  patch2.rs  pypi.rs  repo_or_cz.rs  sourcehut.rs  svn.rs  url.rs  zip.rs
tests/: integration.rs
tests/cmd/: arg.stdout  arg.toml  arg_str.stdout  arg_str.toml  expr.stdout  expr.toml  hash.stdout  hash.toml  indent.stdout  indent.toml  json.stdout  json.toml  overwrite.stdout  overwrite_str.stdout  overwrite_str.toml  parse.stdout  parse.toml  rev.stdout  rev.toml
tests/cmd/fetcher/: bitbucket.stdout  bitbucket.toml  builtin_git.stdout  builtin_git.toml  gitea.stdout  github.stdout  github.toml  gitiles.stdout  gitiles.toml  hex.stdout  hex.toml  patch.stdout  patch.toml  patch2.stdout  patch2.toml  pypi.stdout  pypi.toml  repo_or_cz.stdout  repo_or_cz.toml  sourcehut.stdout  svn.stdout  svn.toml  url.stdout  url.toml
tests/cmd/fetcher/bitbucket/: rev.stdout  rev.toml  tag.stdout
tests/cmd/fetcher/crates_io/: basic.toml  install.toml  lib_rs.stdout  lib_rs.toml  short.toml
tests/cmd/fetcher/git/: basic.stdout  basic.toml  rev.stdout  rev.toml  scheme.stdout  scheme.toml  scheme_plus.stdout  scheme_plus.toml  tag.toml
tests/cmd/fetcher/gitea/: rev.stdout  rev.toml  tag.stdout  tag.toml
tests/cmd/fetcher/github/: rev.stdout  rev.toml  tag.stdout
tests/cmd/fetcher/gitiles/: rev.stdout  rev.toml  tag.stdout  tag.toml
tests/cmd/fetcher/gitlab/: basic.stdout  basic.toml  group.stdout  group.toml  instance.stdout  instance.toml  nested.stdout  nested.toml  rev.stdout  rev.toml  tag.stdout  trailing_slash.toml
tests/cmd/fetcher/hg/: basic.stdout  basic.toml  scheme_plus.stdout  scheme_plus.toml
tests/cmd/fetcher/pypi/: extension.stdout  extension.toml
tests/cmd/fetcher/sourcehut/: rev.stdout  rev.toml  tag.stdout  tag.toml
tests/cmd/fetcher/zip/: tar_bz2.stdout  tar_bz2.toml  tar_gz.stdout  tar_gz.toml  tgz.stdout  tgz.toml  zip.stdout  zip.toml
tests/cmd/overwrite/: basic.toml  rev.stdout  rev.toml  str.toml  tag.toml  version.stdout  version.toml
tests/cmd/submodules/: builtin_git.stdout  builtin_git.toml  false.stdout  false.toml  git.stdout  git.toml  gitea.stdout  gitea.toml  github.toml  gitlab.stdout  gitlab.toml  hg.stdout  hg.toml  json.stdout  json.toml  sourcehut.stdout  sourcehut.toml  true.stdout  true.toml  unsupported.toml
