[package]
name = "nurl"
version = "0.3.13"
authors = ["figsoda <figsoda@pm.me>"]
edition = "2021"
description = "Generate Nix fetcher calls from repository URLs"
readme = "README.md"
homepage = "https://github.com/nix-community/nurl"
repository = "https://github.com/nix-community/nurl"
license = "MPL-2.0"
keywords = ["cli", "fetch", "git", "nix", "prefetch"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.86"
bstr = "1.9.0"
data-encoding = "2.5.0"
enum_dispatch = "0.3.12"
gix-url = "0.27.0"
is-terminal = "0.4.12"
itertools = "0.13.0"
nix-compat = { git = "https://code.tvl.fyi/depot.git:/tvix/nix-compat.git" }
owo-colors = { version = "4.0.0", features = ["supports-colors"] }
rustc-hash = "2.0.0"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.128"
ureq = { version = "2.10.1", features = ["json"] }

[dependencies.clap]
version = "4.5.1"
features = ["cargo", "derive", "unicode", "wrap_help"]

[build-dependencies]
clap = { version = "4.5.1", features = ["derive"] }
clap_complete = "4.5.3"
clap_mangen = "0.2.20"

[dev-dependencies]
assert_cmd = "2.0.13"
nu-glob = "0.90.1"
trycmd = "0.15.0"

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
