[package]
name = "nurl"
version = "0.3.13"
authors = ["figsoda <figsoda@pm.me>"]
edition = "2024"
description = "Generate Nix fetcher calls from repository URLs"
readme = "README.md"
homepage = "https://github.com/nix-community/nurl"
repository = "https://github.com/nix-community/nurl"
license = "MPL-2.0"
keywords = ["cli", "fetch", "git", "nix", "prefetch"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.100"
bstr = "1.12.1"
data-encoding = "2.10.0"
enum_dispatch = "0.3.13"
gix-url = "0.35.0"
is-terminal = "0.4.17"
itertools = "0.14.0"
nix-compat = { git = "https://code.tvl.fyi/depot.git:/tvix.git", package = "nix-compat" }
owo-colors = { version = "4.2.3", features = ["supports-colors"] }
rustc-hash = "2.1.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
ureq = { version = "3.1.4", features = ["json"] }

[dependencies.clap]
version = "4.5.54"
features = ["cargo", "derive", "unicode", "wrap_help"]

[build-dependencies]
clap = { version = "4.5.54", features = ["derive"] }
clap_complete = "4.5.65"
clap_mangen = "0.2.31"

[dev-dependencies]
assert_cmd = "2.1.2"
nu-glob = "0.110.0"
trycmd = "0.15.11"

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
